--- a/css/styles.css
+++ b/css/styles.css
@@ -9,10 +9,14 @@
   --subtle-text: #8e8f99;
   --white-color: #ffffff;
   --cloud-color: #f4f4fd;
+  --modal-bcg: #fcfcfc;
   --cornflower-accent: #e7e9fc;
   --primary-brand: #4d5ae5;
   --pressed-state-color: #404bbf;
   --success-color: #31d0aa;
+  /* ANIMATION */
+  --primary-duration: 250ms;
+  --primary-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /**
@@ -49,6 +53,7 @@ p {
 .link {
   text-decoration: none;
   color: currentColor;
+  /* transition: color var(--primary-duration) var(--primary-timing-function); */
 }
 button {
   font-family: inherit;
@@ -100,21 +105,38 @@ button {
 
 .header-nav-list {
   display: flex;
-  align-items: center;
   gap: 40px;
 }
 .header-nav-list .link {
+  position: relative;
   display: block;
   padding-top: 24px;
   padding-bottom: 24px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition: color var(--primary-duration) var(--primary-timing-function);
 }
 .header-nav-list .link:hover,
 .link:focus {
   color: var(--pressed-state-color);
 }
+.current {
+  color: var(--pressed-state-color);
+}
+
+.current::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--pressed-state-color);
+}
+
 .header-contact {
   margin-right: 40px;
 }
@@ -139,18 +161,6 @@ button {
 
 /* NAVIGATION */
 
-.header-nav-list .link {
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--dark-color);
-}
-
-.site-nvg .link:hover,
-.link:focus {
-  color: var(--pressed-state-color);
-}
-
 /* CONTACTS */
 .address {
   font-style: normal;
@@ -159,6 +169,7 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
+  transition: color var(--primary-duration) var(--primary-timing-function);
 }
 .address .link:hover,
 .link:focus {
@@ -216,6 +227,7 @@ button {
 
   color: var(--white-color);
   background-color: var(--primary-brand);
+  transition: color var(--primary-duration) var(--primary-timing-function);
 }
 /* BUTTON */
 
@@ -364,6 +376,8 @@ button {
   align-items: center;
   background-color: var(--primary-brand);
   border-radius: 50%;
+  transition: background-color var(--primary-duration)
+    var(--primary-timing-function);
 }
 .footer-socials-icon {
   fill: var(--cloud-color);
@@ -371,6 +385,73 @@ button {
 .footer-socials-link:hover,
 .footer-socials-link:focus {
   background-color: var(--success-color);
+}
+
+/**
+  |============================
+  | MODAL WINDOW
+  |============================
+*/
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(46, 47, 66, 0.4);
+  backdrop-filter: blur(5px);
+  opacity: 1;
+  transition: opacity var(--primary-duration) var(--primary-timing-function),
+    visibility var(--primary-duration) var(--primary-timing-function);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform var(--primary-duration) var(--primary-timing-function);
+
+  width: 408px;
+  min-height: 576px;
+  background-color: var(--modal-bcg);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+.modal-btn {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-color: var(--cornflower-accent);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 24px;
+  height: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 24px;
+  margin-right: 24px;
+  transition: color var(--primary-duration) var(--primary-timing-function);
+}
+.modal-icon {
+  fill: var(--dark-color);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  background-color: var(--pressed-state-color);
+  border: 1px solid transparent;
+}
+.modal-btn:hover .modal-icon,
+.modal-btn:focus .modal-icon {
+  fill: var(--white-color);
 }
 
 /* TEAM SECTION */
@@ -426,6 +507,8 @@ button {
   justify-content: center;
   align-items: center;
   fill: var(--white-color);
+  transition: background-color var(--primary-duration)
+    var(--primary-timing-function);
 }
 
 .socials-link:hover,
@@ -462,6 +545,7 @@ button {
   padding: 16px 32px;
   height: 100%;
   color: var(--subtle-text);
+  transition: color var(--primary-duration) var(--primary-timing-function);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -525,4 +609,33 @@ button {
 .portfolio-link:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
+}
+.product-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateY(100%);
+
+  width: 100%;
+  height: 100%;
+
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+
+  background-color: var(--primary-brand);
+}
+.overlay-descr {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud-color);
 }
