--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ button {
   content: "";
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   height: 4px;
