--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@
   --pressed-state-color: #404bbf;
   --success-color: #31d0aa;
   /* ANIMATION */
-  --primary-duration: 250ms;
-  --primary-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* --primary-duration: 250ms;
+  --primary-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 /**
@@ -115,7 +115,9 @@ button {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  transition: color var(--primary-duration) var(--primary-timing-function);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-nav-list .link:hover,
 .link:focus {
@@ -169,7 +171,9 @@ button {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--text-color);
-  transition: color var(--primary-duration) var(--primary-timing-function);
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address .link:hover,
 .link:focus {
@@ -227,8 +231,9 @@ button {
 
   color: var(--white-color);
   background-color: var(--primary-brand);
-  transition: background-color var(--primary-duration)
-    var(--primary-timing-function);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* BUTTON */
 
@@ -250,8 +255,9 @@ button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   color: var(--primary-brand);
   background-color: var(--cloud-color);
-  transition: background-color var(--primary-duration)
-    var(--primary-timing-function);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -379,8 +385,9 @@ button {
   align-items: center;
   background-color: var(--primary-brand);
   border-radius: 50%;
-  transition: background-color var(--primary-duration)
-    var(--primary-timing-function);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-socials-icon {
   fill: var(--cloud-color);
@@ -400,13 +407,13 @@ button {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
   backdrop-filter: blur(5px);
-  opacity: 1;
-  transition: opacity var(--primary-duration) var(--primary-timing-function),
-    visibility var(--primary-duration) var(--primary-timing-function);
+  transition-property: opacity, visibility;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -418,11 +425,12 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%);
   transition: transform var(--primary-duration) var(--primary-timing-function);
 
   width: 408px;
   min-height: 576px;
+  padding: 24px;
   background-color: var(--modal-bcg);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -442,11 +450,15 @@ button {
   align-items: center;
   margin-top: 24px;
   margin-right: 24px;
-  transition: background-color var(--primary-duration)
-    var(--primary-timing-function);
+  transition-property: background-color, border;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-icon {
   fill: var(--dark-color);
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover,
 .modal-btn:focus {
@@ -511,8 +523,9 @@ button {
   justify-content: center;
   align-items: center;
   fill: var(--white-color);
-  transition: background-color var(--primary-duration)
-    var(--primary-timing-function);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .socials-link:hover,
@@ -544,12 +557,12 @@ button {
   justify-content: center;
   border: 1px solid var(--subtle-text);
   border-radius: 4px;
-  width: 168px;
-  height: 88px;
   padding: 16px 32px;
   height: 100%;
   color: var(--subtle-text);
-  transition: color var(--primary-duration) var(--primary-timing-function);
+  transition-property: border, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -575,8 +588,12 @@ button {
   justify-content: center;
   gap: 24px;
   margin-bottom: 72px;
-  transition: background-color var(--primary-duration)
-    var(--primary-timing-function);
+}
+
+.filter-list .button {
+  transition-property: border, color, box-shadow, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filter-list .button:hover,
 .button:focus {
@@ -609,7 +626,9 @@ button {
 }
 .portfolio-link {
   display: block;
-  transition: box-shadow var(--primary-duration) var(--primary-timing-function);
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
@@ -633,7 +652,10 @@ button {
   padding-left: 32px;
   padding-right: 32px;
   background-color: var(--primary-brand);
-  transition: transform var(--primary-duration) var(--primary-timing-function);
+
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-item:hover .overlay {
   transform: translateY(0);
